--- a/try2.html
+++ b/try2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="description" content=" Web Project ">
-  <meta name="keywords" content="HTML,CSS,XML,JavaScript,boostrap,php">
+  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
   <meta name="author" content="Khruohinuo Kera">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio K.Kera</title>
@@ -16,119 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" >
  <link rel="stylesheet" href="try2.css">
- <script src="try2.js"></script><style>/* Set max width and center the content */
-.max-width {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-/* Style the title */
-.title {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-/* Style the carousel */
-.carousel {
-  display: flex;
-  justify-content: center;
-}
-
-/* Style the card */
-.card {
-  background-color: #f1f1f1;
-  border-radius: 8px;
-  margin: 0 10px;
-  padding: 20px;
-  text-align: center;
-}
-
-/* Style the image */
-.card img {
-  width: 100%;
-  max-height: 200px;
-  object-fit: cover;
-  border-radius: 8px;
-  margin-bottom: 20px;
-}
-
-/* Style the text */
-.card .text {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-/* Style the description */
-.card p {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
-/* Style the project link */
-.card .project {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 4px;
-  font-weight: bold;
-}
-
-.card .project:hover {
-  background-color: #555;
-}
- .modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      z-index: 9999;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal video {
-      max-width: 80%;
-      max-height: 80%;
-    }
-
-    .close-button {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-
-    .modal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 9999;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .modal video {
-        max-width: 80%;
-        max-height: 80%;
-    }
-
-    .close-button {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-    }
-</style>
-
+ <script src="try2.js"></script>
  </head>
 <body>
 
